--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "enupal/paypal",
   "description": "Sell products or services on your website using a PayPal Buy Now Button",
   "type": "craft-plugin",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "keywords": [
     "craft",
     "cms",
@@ -25,13 +25,13 @@
   "authors": [
     {
       "name": "Enupal",
-      "homepage": "http://enupal.com/en"
+      "homepage": "http://enupal.com"
     }
   ],
   "support": {
     "email": "support@enupal.com",
     "issues": "https://github.com/enupal/paypal/issues",
-    "docs": "https://enupal.com/en/craft-plugins/enupal-paypal/docs"
+    "docs": "https://enupal.com/craft-plugins/paypal/docs"
   },
   "require": {
     "craftcms/cms": "^3.0.0"
